# teensy4-selfrebootor

./: .gitignore  Cargo.toml  README.md
examples/: mouse.rs  rebootor.rs  run.py  teensy4_selfrebootor.rs  teensy4_selfrebootor_with_uart_log.rs  teensy4_selfrebootor_with_usb_serial.rs  teensy_4_0.rs  teensy_4_1.rs  teensy_micromod.rs
examples/common/: mod.rs
src/: hid_descriptor.rs  lib.rs  reboot.rs
