[package]
name = "teensy4-selfrebootor"
version = "0.1.0"
edition = "2021"
authors = ["Finomnis <finomnis@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Finomnis/teensy4-selfrebootor"
description = "A self-rebooting implementation of teensy's rebootor for teensy4"
keywords = ["teensy4", "imxrt", "nxp", "rebootor"]
categories = ["embedded", "no-std"]

exclude = ["/.gitignore", "/.github/", "/.vscode/"]


[dependencies]
log = "0.4.19"

teensy4-bsp = { version = "0.4.3" }
usb-device = "0.2.9"
usbd-hid = "0.6.1"


[dev-dependencies]

teensy4-bsp = { version = "0.4.3", features = ["rt"] }
teensy4-panic = { version = "0.2.3", default-features = false }

rtic = { version = "2.0.1", features = ["thumbv7-backend"] }

imxrt-log = { version = "0.1.1", default-features = false, features = [
    "log",
    "lpuart",
] }

embedded-hal = "0.2.7"
nb = "1.1.0"           # Async


# Allow docsrs options
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
