[package]
name = "teensy4-selfrebootor"
version = "0.2.0"
edition = "2021"
authors = ["Finomnis <finomnis@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Finomnis/teensy4-selfrebootor"
description = "A self-rebooting implementation of teensy's rebootor for teensy4"
keywords = ["teensy4", "imxrt", "nxp", "rebootor"]
categories = ["embedded", "no-std"]

exclude = ["/.gitignore", "/.github/", "/.vscode/"]


[dependencies]
log = "0.4.21"

teensy4-bsp = { version = "0.4.7" }
usb-device = "0.2.9"
usbd-hid = "0.6.1"


[dev-dependencies]

rtic = { version = "2.0.1", features = ["thumbv7-backend"] }

teensy4-bsp = { version = "0.4.3", features = ["rt"] }
teensy4-panic = { version = "0.2.3", default-features = false }

imxrt-uart-panic = "0.1.2"
imxrt-log = { version = "0.1.1", default-features = false, features = [
    "log",
    "lpuart",
] }

embedded-hal = "0.2.7"
nb = "1.1.0"           # Async

# Pull rtic-monotonics from github because version 2.0.0 hasn't made it to crates.io as of this writing.
rtic-monotonics = { git = "https://github.com/rtic-rs/rtic.git", branch = "master", package = "rtic-monotonics", features = ["imxrt_gpt1"] }
# Custom usbd-serial that (1) matches the version of usb-device used by other dependencies and
# (2) supports custom control requests, enabling us to handle the reboot request.
usbd-serial = { git = "https://github.com/alecrivers/usbd-serial.git" }

# Allow docsrs options
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
